--- a/day01/Day01/Day01/Day01.vcxproj
+++ b/day01/Day01/Day01/Day01.vcxproj
@@ -150,7 +150,9 @@
     </ClCompile>
     <ClCompile Include="Test04.cpp">
       <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</SDLCheck>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="test05.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
