--- a/day01/Day01/Day01/Day01.vcxproj
+++ b/day01/Day01/Day01/Day01.vcxproj
@@ -173,7 +173,7 @@
     <ClCompile Include="day0601.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="day0601_jiho.cpp" />
+    <ClCompile Include="day0601_sample.cpp" />
     <ClCompile Include="test05.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
