--- a/day01/Day01/Day01/Day01.vcxproj.filters
+++ b/day01/Day01/Day01/Day01.vcxproj.filters
@@ -72,7 +72,7 @@
     <ClCompile Include="day0601.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="day0601_jiho.cpp">
+    <ClCompile Include="day0601_sample.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
