--- a/day01/Day01/Day01/Day01.vcxproj.filters
+++ b/day01/Day01/Day01/Day01.vcxproj.filters
@@ -114,5 +114,8 @@
     <ClCompile Include="day0802.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="day1001.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
