--- a/stack/Project1/Project1/Project1.vcxproj.filters
+++ b/stack/Project1/Project1/Project1.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="stack.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="linkedlist.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
