--- a/stack/Project1/Project1/Project1.vcxproj.filters
+++ b/stack/Project1/Project1/Project1.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="linkedlist.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="cs50.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
