--- a/stack/Project1/Project1/Project1.vcxproj.filters
+++ b/stack/Project1/Project1/Project1.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="LinkedListPractice.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="tree.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
